--- a/app/src/main/res/layout/activity_dia_entry_detail.xml
+++ b/app/src/main/res/layout/activity_dia_entry_detail.xml
@@ -39,10 +39,6 @@
         app:layout_constraintTop_toBottomOf="@+id/dia_entry_detail_toolbar"
         app:srcCompat="@drawable/stock_beach" />
 
-    <!--Tags inside a LinearLayout wrapped in HorizontalScrollView -->
-
-    <!-- Placeholder image for mood -->
-
     <!--Time-->
     <TextView
         android:id="@+id/textView_timestamp"
@@ -55,6 +51,23 @@
         android:text="13:37"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage" />
+
+    <!--Mood-->
+    <ImageView
+        android:id="@+id/imageView_mood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/dia_entry_detail_moodDescription"
+        app:layout_constraintEnd_toStartOf="@+id/textView_location"
+        app:layout_constraintStart_toEndOf="@+id/textView_timestamp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage"
+        app:srcCompat="@drawable/ic_sentiment_5_very_satisfied_black_24dp"
+        />
 
     <!--Location-->
     <TextView
