--- a/app/src/main/res/layout/dia_entry_overview_list.xml
+++ b/app/src/main/res/layout/dia_entry_overview_list.xml
@@ -3,21 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:padding="10dip"
+    android:background="@drawable/border">
 
     <TextView
         android:layout_margin="10dp"
-        android:text="Name"
+        android:text="@string/title_overview_txt"
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"/>
 
     <TextView
+        android:layout_margin="10dp"
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:text="Date" />
+        android:text="@string/date_overview_txt" />
 
 </LinearLayout>
