--- a/app/src/main/res/layout/activity_dia_entry_create.xml
+++ b/app/src/main/res/layout/activity_dia_entry_create.xml
@@ -96,12 +96,13 @@
     <!--Mood select-->
     <ImageButton
         android:id="@+id/imageButton_moodSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/ic_sentiment_5_very_satisfied_black_24dp" />
 
