--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -31,7 +31,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:hint="@string/diaEntryTitleEditTextHint"
+        android:hint="@string/create_editTextHint_title"
         android:maxLength="20"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:gravity="top|left"
-        android:hint="@string/diaEntryDescEditTextHint"
+        android:hint="@string/create_editTextHint_desc"
         android:inputType="textMultiLine"
         android:lines="10"
         android:minLines="6"
@@ -55,6 +55,10 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="180dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +91,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/moodSelect_text"
+        android:text="@string/create_textView_moodSelect"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/location_input"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +130,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/location_input"
+        android:hint="@string/create_editText_location"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_moodSelect" />
