--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,18 +6,18 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_activity_search"
+        android:title="@string/search_activity_title"
         app:showAsAction="ifRoom"/>
 
     <!-- Settings -->
     <item
         android:id="@+id/settings"
-        android:title="@string/title_activity_settings"
+        android:title="@string/settings_activity_title"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/clearAllBtn"
-        android:title="@string/clearallbutt"
+        android:title="@string/toolbar_clearAll"
         app:showAsAction="never"/>
 
 </menu>
