--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00818A</color>
-    <color name="colorPrimaryDark">#385F71</color>
-    <color name="colorAccent">#248888</color>
+    <color name="colorPrimary">#80DEEA</color>
+    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorPrimaryLight">#B2EBF2</color>
+    <color name="colorAccent">#00E5FF</color>
+    <color name="text_color_primary">#000000</color>
+    <color name="text_color_secondary">#757575</color>
+    <color name="divider_color">#B0BEC5</color>
 </resources>
