--- a/app/src/main/res/drawable/shape_buttons_drawable.xml
+++ b/app/src/main/res/drawable/shape_buttons_drawable.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <!--Sets the rounded background and color of the Tags-->
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorAccent" />
 
     <padding
         android:bottom="12dp"
