--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="8dp"
         android:hint="@string/create_editTextHint_title"
         android:maxLength="20"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_toolbar" />
