--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="357dp"
         android:layout_height="wrap_content"
-
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -39,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".70"
             android:hint="@string/search_editTextHint"
+            android:singleLine="true"
             android:maxLength="20" />
 
         <ImageButton
