--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -59,6 +59,10 @@
         android:id="@+id/create_imageView_mainImage"
         android:layout_width="match_parent"
         android:layout_height="180dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +110,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/shape_buttons_drawable"
         app:layout_constraintTop_toBottomOf="@+id/create_imageView_mainImage"
         app:srcCompat="@drawable/ic_sentiment_5_very_satisfied_black_24dp" />
 
@@ -117,7 +121,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/shape_buttons_drawable"
         android:src="@drawable/baseline_location_on_black_18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_moodSelect" />
