--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/diaEntryDetail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
@@ -24,8 +23,8 @@
     <!--Image -->
     <ImageView
         android:id="@+id/imageView_entryImage"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_width="420dp"
+        android:layout_height="171dp"
         android:contentDescription="@string/detail_imageViewDesc_entryImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
